--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,20 @@
 @import "tailwindcss";
+
+@layer utilities {
+    .primary-text {
+        @apply text-xl font-bold;
+    }
+}
+
+
+/* Hide the up and down arrows on input of type number */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+    /* Firefox */
+}
